<resources>
    <string name="app_name">HealthRecord</string>
    <string name="health_record">Health Record</string>
    <string name="sign_in">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="user_id">User ID</string>
    <string name="patient_name_value">Patient Name</string>
    <string name="room_number">Room No:</string>
    <string name="medical_record_id">Id:</string>
    <string name="medical_record_date">Date:</string>
    <string name="patient_name">Name:</string>
    <string name="current_smoker">Current Smoker</string>
    <string name="smoke_per_day">Smoke Per Day</string>
    <string name="smoke_per_day_value">0</string>
    <string name="current_smoker_value">NO</string>
    <string name="bpMEDS">BPMED</string>
    <string name="bpMEDS_value">Not Currently Used</string>
    <string name="prevalent_stoke">Prevalent Stoke</string>
    <string name="prevalent_stoke_value">Free</string>
    <string name="prevalent_hyp">Prevalent Hyp</string>
    <string name="prevalent_hyp_value">No</string>
    <string name="diabetes">Diabetes</string>
    <string name="diabetes_value">Yes</string>
    <string name="totChol">totChol</string>
    <string name="totChol_value">120.0</string>
    <string name="sysBP">sysBP</string>
    <string name="sysBP_value">130.0</string>
    <string name="diaBP">diaBP</string>
    <string name="diaBP_value">85</string>
    <string name="bmi">BMI</string>
    <string name="bmi_value">25.7</string>
    <string name="heartRate">Heart Rate</string>
    <string name="heartRate_value">70</string>
    <string name="glucose">Glucose</string>
    <string name="glucose_value">90</string>
    <string name="heart_disease_result">Heart Disease Result</string>
    <string name="heart_disease_result_value">No Result Yet</string>
    <string name="generate_medical_record">Generate Medical Record</string>
    <string name="view_patient">View Patient</string>
    <string name="register_patient">Register Patient</string>
    <string name="register">Register</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="enter_room_number">Enter Room Number 001–500</string>
    <string name="search_patient_name">Search Patient Name</string>
    <string name="welcome">Welcome</string>
    <string name="no_medical_record_for_this_patient_yet">No medical record for this patient yet</string>
    <string name="id">ID :</string>
</resources>