<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_marginTop="@dimen/margin_medium"
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_full"
        android:textStyle="bold"
        android:text="@string/username"
        android:textSize="@dimen/text_heading_1x"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/label_userid"
        android:textColor="@color/white_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintEnd_toStartOf="@id/tv_userid"/>

    <TextView
        android:id="@+id/tv_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:textColor="@color/white_full"
        android:textStyle="italic"
        android:text="@string/user_id"
        android:textAlignment="center"
        android:textSize="@dimen/text_regular" />

    <View
        android:layout_marginTop="@dimen/margin_medium_2"
        app:layout_constraintTop_toBottomOf="@id/tv_userid"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bg_screen2"/>
    
    <com.google.android.material.tabs.TabLayout

        android:layout_marginTop="@dimen/margin_medium_2"
        android:id="@+id/tabview_patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="fixed"
        app:tabTextColor="@color/white_full"
        app:tabGravity="center"
        app:tabIndicatorColor="@color/accent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_userid"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_patient"
        android:background="@drawable/card_view_corner"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tabview_patient"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


