<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        tools:context=".activities.PatientDetailActivity">

        <FrameLayout
            android:id="@+id/fl_no_medical_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/no_medical_record_image" />

            <TextView
                android:id="@+id/noRecordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_medical_record_for_this_patient_yet"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </FrameLayout>


    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/patientImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="@dimen/margin_large"
            app:civ_border_color="@color/black_full"
            app:civ_border_width="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cardView"
            app:shapeAppearanceOverlay="@style/circular"
            app:srcCompat="@drawable/profilepic"
            app:strokeColor="@color/black_full"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/label_medical_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/medical_record_date"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/white_full"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/label_patient_name"
            app:layout_constraintStart_toStartOf="@id/label_patient_name"
            />

    <TextView
        android:id="@+id/tv_medical_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/text_regular"
        android:layout_marginStart="@dimen/margin_medium"
        android:textColor="@color/white_full"
        app:layout_constraintStart_toEndOf="@+id/label_medical_date"
        app:layout_constraintBottom_toBottomOf="@id/label_medical_date"
        />

        <TextView
            android:id="@+id/label_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/patient_name"
            android:textColor="@color/white_full"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintStart_toEndOf="@+id/patientImageView"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white_full"
        android:textSize="@dimen/text_regular"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/label_patient_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_medical_record_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:fontFamily="sans-serif-light"
        android:text="@string/medical_record_id"
        android:textSize="@dimen/text_regular"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/white_full"
        app:layout_constraintStart_toEndOf="@id/patientImageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_patient_name" />

    <TextView
        android:id="@+id/tv_medical_record_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/text_regular"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/white_full"
        app:layout_constraintStart_toEndOf="@id/label_medical_record_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_patient_name" />



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginHorizontal="@dimen/margin_medium"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="6dp"
            android:layout_marginTop="@dimen/margin_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patientImageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <GridView
                    android:id="@+id/grid_patient_detail"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_margin="@dimen/margin_small" />

                            <TextView
                                android:id="@+id/label_heart_disease_result"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_medium"
                                android:textAlignment="center"
                                android:text="@string/heart_disease_result"
                                />

                            <TextView
                                android:id="@+id/tv_heart_disease_result"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_medium_2"
                                android:textAlignment="center"
                                android:textSize="@dimen/text_regular_2x"
                                android:textColor="@color/black_full"
                                android:text="@string/heart_disease_result_value"
                                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>